The 'clean' target failed because of a missing <sdkdir>/tools/ant/AndroidManifest.xml. The subant call was now replaced by a simple dependency on the base clean target from the imported android build script.

--- a/build.xml
+++ b/build.xml
@@ -114,11 +114,7 @@ in between standard targets -->
         </javac>
     </target>
 
-    <target name="clean" description="cleanup module">
-        <!-- dunno how to depend on android's clean, so subant instead -->
-        <subant inheritall="true" buildpath="${sdk.dir}/tools/ant" antfile="build.xml" failonerror="true">
-            <target name="clean"/>
-        </subant>
+    <target name="clean" description="cleanup module" depends="android_rules.clean">
         <delete dir="${out.test-classes.absolute.dir}"/>
         <delete dir="${tmp.dir}"/>
     </target>
